<resources>
    <string name="app_name">TareMakmur</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_title">Tare Makmur</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="password_hint">Masukkan Passworc</string>
    <string name="text_login">Login</string>
    <string name="title_barang">Barang</string>
    <string name="title_invoice">Invoice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_customer">Customer</string>
</resources>