<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_invoice">

    <fragment
        android:id="@+id/navigation_invoice"
        android:name="site.encryptdev.taremakmur.ui.invoice.InvoiceFragment"
        android:label="@string/title_invoice"
        tools:layout="@layout/fragment_invoice" />

    <fragment
        android:id="@+id/navigation_barang"
        android:name="site.encryptdev.taremakmur.ui.barang.BarangFragment"
        android:label="@string/title_barang"
        tools:layout="@layout/fragment_barang" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="site.encryptdev.taremakmur.ui.customer.CustomerFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_customer" />
</navigation>